--- a/.github/workflows/build_and_test_jazzy.yaml
+++ b/.github/workflows/build_and_test_jazzy.yaml
@@ -4,7 +4,7 @@ name: Build and Test (jazzy)
 on:
   # Triggers the workflow on push
   push:
-    branches: [ jazzy ]
+    branches: [ jazzy-ci-test ]
 
   # Triggers the workflow on pull requests
   pull_request:
@@ -26,6 +26,6 @@ jobs:
         with:
           # The testing repository will be used
           use-ros2-testing: true
-      - uses: ros-tooling/action-ros-ci@v0.3
+      - uses: ijnek/action-ros-ci@jazzy
         with:
           target-ros2-distro: jazzy
